# flux-fiction

site-wrappers/: ff-benchmark.py
src/: meson.build
src/flux_fiction/_adapters/flux/: adapter.py  modules.py
src/flux_fiction/_core/: engine.py  models.py
src/flux_fiction/cli/: run_ff.py
src/flux_fiction/telemetry/: bridge.py
src/jobtap/: emu-jobtap.c  ff_otel.c
src/tests/: test_benchmark_utility.py  test_feasibility_check.py  test_flux_module_config.py  test_telemetry_layers.py
